// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Waifu renders unchanged 1`] = `
<DocumentFragment>
  <div
    class="flex justify-center items-center flex-col min-h-screen gap-8 bg-primary"
  >
    <h1
      class="text-4xl font-bold"
    >
      Random Waifu
    </h1>
    <p>
      Loading...
    </p>
    <button
      class="border border-gray-400 px-2 py-1 rounded-lg hover:bg-white"
    >
      Get random waifu
    </button>
  </div>
</DocumentFragment>
`;

exports[`Waifu renders unchanged 2`] = `
<DocumentFragment>
  <div
    class="flex justify-center items-center flex-col min-h-screen gap-8 bg-primary"
  >
    <h1
      class="text-4xl font-bold"
    >
      Random Waifu
    </h1>
    <img
      alt="waifu"
      class="max-w-[80%] max-h-[60vh]"
      src="file1.jpg"
    />
    <button
      class="border border-gray-400 px-2 py-1 rounded-lg hover:bg-white"
    >
      Get random waifu
    </button>
  </div>
</DocumentFragment>
`;
